--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="longtime">Long Time</string>
     <string name="alert">Alert</string>
     <string name="birdbird">Bird Bird</string>
-    <string name="fatherspace">Father Space</string>
+    <string name="fatherspace">Spaaace</string>
     <string name="glassshark">Glass Shark</string>
     <string name="yeahthelemons">Yeah the Lemons</string>
     <string name="takethelemons">Take the Lemons</string>
